// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidUntil /> should render '2 hours' 1`] = `
<span
  title="2018-05-23 00:27:24"
>
  2 hours ago
</span>
`;

exports[`<ValidUntil /> should render 'N/A' 1`] = `
<span>
  N/A
</span>
`;

exports[`<ValidUntil /> should render 'any time now' 1`] = `
<span
  title="2018-05-23 03:32:35"
>
  any time now
</span>
`;
